# ROCKET-ML-in-R

./: .Rhistory  .gitignore  README.md  augmentations.r  mylibs.r  rocket.r  rocket_functions.r  rocket_functions_multivariate.r  rocket_functions_univariate.r  rocket_multivariate.r  rocket_univariate.r
cpp/: .clang-format  CMakeLists.txt  compile_commands.json  run.sh
cpp/include/: CSVRange.hpp  csvfile.hpp
cpp/src/: rocket.cpp
data/: AllGestureWiimote.txt  Cricket.txt  data-source-url.txt
data/AllGestureWiimoteX/: AllGestureWiimoteX_TEST.arff  AllGestureWiimoteX_TRAIN.arff
data/AllGestureWiimoteY/: AllGestureWiimoteY_TEST.arff  AllGestureWiimoteY_TRAIN.arff  AllGestureWiimoteY_TRAIN.txt
data/AllGestureWiimoteZ/: AllGestureWiimoteZ_TEST.arff  AllGestureWiimoteZ_TRAIN.arff  AllGestureWiimoteZ_TRAIN.txt
data/CricketY/: CricketY_TEST.arff  CricketY_TEST.txt  CricketY_TRAIN.arff  CricketY_TRAIN.txt
data/CricketZ/: CricketZ_TEST.arff  CricketZ_TEST.txt  CricketZ_TRAIN.arff  CricketZ_TRAIN.txt
data/GestureMidAirD1/: GestureMidAirD1_TEST.arff  GestureMidAirD1_TEST.txt  GestureMidAirD1_TRAIN.arff  GestureMidAirD1_TRAIN.txt
data/GestureMidAirD2/: GestureMidAirD2_TEST.arff  GestureMidAirD2_TEST.txt  GestureMidAirD2_TRAIN.arff  GestureMidAirD2_TRAIN.txt
data/GestureMidAirD3/: GestureMidAirD3_TEST.arff  GestureMidAirD3_TEST.txt  GestureMidAirD3_TRAIN.arff  GestureMidAirD3_TRAIN.txt
data/UWaveGestureLibraryX/: UWaveGestureLibraryX_TRAIN.arff
data/UWaveGestureLibraryY/: UWaveGestureLibraryY_TRAIN.arff
results/: results_cpp.csv  results_ucr.csv
(+1 files in other folders)
